Added privacy statement, changed font color on homepage

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -260,7 +260,7 @@ footer.main-footer {
 .social-link {
   color: #fff;
   font-size: 0.9rem;
-  margin: 0 0.625rem;
+  margin: 0 0.5rem;
 }
 
 .social-link:hover {
@@ -327,7 +327,7 @@ STYLE SWITCHER FOR DEMO
 .hero-heading {
   font-size: 4.8rem;
   line-height: 1;
-  color: $yellow;
+  color: $purple;
   text-shadow: 5px 5px 0px rgba(0,0,0,0.1);
 }
 
