--- a/themes/appton/layouts/partials/footer.html
+++ b/themes/appton/layouts/partials/footer.html
@@ -41,6 +41,7 @@
                   <a href="https://linkedin.com/company/skyworkz" class="social-link"><i class="fa fa-linkedin"></i></a>
                   <a href="https://twitter.com/skyworkznl" class="social-link"><i class="fa fa-twitter"></i></a>
                   <a href="https://github.com/skyworkz" class="social-link"><i class="fa fa-github"></i></a>
+                  <a href="https://instagram.com/skyworkz.nl" class="social-link"><i class="fa fa-instagram"></i></a>
               </ul>
             </div>
           </div>
