--- a/themes/appton/layouts/partials/hero.html
+++ b/themes/appton/layouts/partials/hero.html
@@ -3,7 +3,7 @@
       <div class="container mb-5">
         <div class="row align-items-center">
           <div class="col-lg-9">
-            <h1 class="hero-heading mb-1 text-yellow text-bold">Do cloud or do not. There is no try.</h1>
+            <h1 class="hero-heading mb-1 text-bold">Do <span class="text-warning">cloud</span> or do not. There is no try.</h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
                 <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We're a boutique consulting firm focused on cloud technology, and we can help you make the right choices and deliver business value faster.</p>
