Added cookie bar, added GA tracking

--- a/themes/appton/layouts/partials/scripts.html
+++ b/themes/appton/layouts/partials/scripts.html
@@ -1,6 +1,28 @@
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
+<script src="/vendor/lightbox2/js/lightbox.js"></script>
+<script src="/js/front.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+<script>
+window.cookieconsent.initialise({
+    "palette": {
+    "popup": {
+        "background": "#1e1e26"
+    },
+    "button": {
+        "background": "#4682b4"
+    }
+    },
+    "theme": "edgeless"
+});
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154801189-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <script src="/vendor/jquery/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
-    <script src="/vendor/lightbox2/js/lightbox.js"></script>
-    <script src="/js/front.js"></script>
+  gtag('config', 'UA-154801189-1');
+</script>
