--- a/themes/appton/layouts/partials/footer.html
+++ b/themes/appton/layouts/partials/footer.html
@@ -31,7 +31,7 @@
       </div>
       <div class="copyrights">
         <div class="container">
-          <div class="row">
+          <div class="row mb-4">
             <div class="col-lg-6 text-center text-lg-left">
               <p class="copyrights-text mb-3 mb-lg-0">&copy; 2019 Skyworkz B.V.</a></p>
             </div>
