--- a/themes/appton/layouts/partials/head.html
+++ b/themes/appton/layouts/partials/head.html
@@ -14,6 +14,7 @@
   {{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options }}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,800">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
   <!-- Js -->
   {{ $main := resources.Get "js/main.js" }}
   {{ $plugins := resources.Get "js/plugins.js" }}
