Improved job descriptions

--- a/themes/appton/layouts/partials/get-started.html
+++ b/themes/appton/layouts/partials/get-started.html
@@ -4,7 +4,7 @@
         <h2 class="display-4">Get in touch</h2>
         <div class="row">
           <div class="col-lg-8 m-auto">
-            <p class="lead text-muted mt-2">Do you want to know how we can help you? Let's have a quick chat.</p>
+            <p class="lead text-muted mt-2">Do you want to know how we can help you? Let's have a chat.</p>
           </div>
         </div>
         <div class="row">
