--- a/themes/appton/layouts/partials/hero.html
+++ b/themes/appton/layouts/partials/hero.html
@@ -1,12 +1,12 @@
     <section class="hero">
-      <div><img src="/img/cloud-computing.svg" alt="..." class="hero-image img-fluid d-none d-lg-block position-absolute mt-5 mr-3" style="top: 100px; z-index: -1; right: 100px; width: 30%;"></div>
-      <div class="container mb-5">
+      <div><img src="/img/cloud-computing.svg" alt="..." class="hero-image img-fluid d-none d-lg-block position-absolute mt-5 mr-3" style="top: 100px; z-index: -1; right: 200px; width: 27%;"></div>
+      <div class="container mb-4">
         <div class="row align-items-center">
           <div class="col-lg-9">
             <h1 class="hero-heading mb-1 text-bold">Do <span class="text-warning">cloud</span> or do not. There is no try.</h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
-                <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We're a boutique consulting firm focused on cloud technology, and we can help you make the right choices and deliver business value faster.</p>
+                <p class="lead text-muted mt-1 mb-4">Things work differently in the cloud. We know how. We're a boutique consultancy focused on cloud technology. We can help you make the right choices and deliver business value faster.</p>
               </div>
             </div>
             <div class="row">
