Added Calendly link, improved route description

--- a/themes/appton/layouts/partials/contact.html
+++ b/themes/appton/layouts/partials/contact.html
@@ -28,9 +28,10 @@
             {{ with .gmaps}}
             <div class="block mt-3">
               <h2>{{ .title }}</h2>
-                <div class="google-map">
+              <div class="google-map">  
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2450.622344457853!2d5.077285951700536!3d52.10480437963812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c66fa9fb18e4b3%3A0x87b3c199ee665619!2sSkyworkz!5e0!3m2!1snl!2snl!4v1557736878153!5m2!1snl!2snl" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
+    <p>Note that the marker on the map shows the <b>exact</b> location of the Skyworkz office. We share the office with a few other companies, and it's located at the top floor of the building. Streetview doesn't show the entrance yet, but it is there.</p>               
+              </div>
             </div>
             {{ end }}
         </div>
