--- a/themes/appton/layouts/partials/careers.html
+++ b/themes/appton/layouts/partials/careers.html
@@ -30,7 +30,11 @@
       <div class="text-center">
         <h2>Did we trigger you?</h2>
         <p>Great! Writing texts is hard, especially for job offers. But now you're here, let's take the next step. Let's have a coffee (or a beer if you like).</p>
-        <a class="btn btn-outline-primary mt-lg-2" href="/contact">Apply now</a>
+        <!-- Calendly link widget begin -->
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+        <a class="btn btn-outline-primary mt-lg-2" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/skyworkz/introduction-interview'});return false;">Apply now</a>
+        <!-- Calendly link widget end -->
       </div>
 </section>
 {{ end }}
