--- a/themes/appton/layouts/partials/head.html
+++ b/themes/appton/layouts/partials/head.html
@@ -1,6 +1,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{ .Page.Title }} - {{ .Site.Title }}</title>
+  <meta name="google-site-verification" content="vFgoq_ujthFq2s_TSookkVztqNplMHkLbMDSvBOBNwY" />
   <meta name="description" content="{{ .Page.Description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
