--- a/themes/appton/layouts/partials/careers.html
+++ b/themes/appton/layouts/partials/careers.html
@@ -51,7 +51,7 @@
               <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
               <a class="btn btn-success" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/skyworkz/introduction-interview'});return false;">Apply now</a>
               <!-- Calendly link widget end -->
-              <button type="button" class="btn btn-outline-danger">Close</button>
+              <button type="button" class="btn btn-outline-danger" data-dismiss="modal" aria-label="Close">Close</button>
             </div>
           </div>
         </div>
