Added chaos engineering page

--- a/themes/appton/layouts/partials/services.html
+++ b/themes/appton/layouts/partials/services.html
@@ -12,7 +12,7 @@
           <div class="col-lg-4">
             <div class="box text-center">
               <div class="icon d-flex align-items-end"><img src="/img/brainstorming.svg" alt="..." class="img-fluid"></div>
-              <h3 class="h4">Workshops</h3>
+              <h3 class="h4"><a href="/workshops">Workshops</a></h3>
               <p class="font-weight-light">We facilitate workshops on cloud engineering, serverless development or containerization. Suitable for managers as well as engineers.</p>
             </div>
           </div>
