Added blogpost "Comparing Google Cloud Serverless Compute Platforms"

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -51,13 +51,17 @@ body {
   }
  }
 
-
+ .anchor { padding-top: 140px; }
 
 /*
 * =====================================================
 *     GENERAL
 * =====================================================
 */
+
+table ul {
+  padding-left: 15px;
+}
 
 blockquote {
   padding-left: 2rem;
