Fixed layout issue, added links

--- a/themes/appton/layouts/partials/footer.html
+++ b/themes/appton/layouts/partials/footer.html
@@ -14,7 +14,7 @@
                 {{ end }}
             </ul>
           </div>
-          <div class="col-lg- mb-5 mb-lg-0">
+          <div class="col-lg-5  mb-5 mb-lg-0">
             <h5 class="footer-heading">Latest blogposts</h5>
             <ul class="list-unstyled">
                 {{ $posts := where .Site.Pages "Type" "blog" }}
