Added missing images, added Twitter cards

--- a/themes/appton/layouts/partials/head.html
+++ b/themes/appton/layouts/partials/head.html
@@ -31,3 +31,4 @@
   <script defer src="{{ $mainJS.Permalink }}"></script>
   {{ partial "schema.html" . | safeHTML }}
   {{ template "_internal/opengraph.html" . }}
+  {{ template "_internal/twitter_cards.html" . }}
