--- a/layouts/shortcodes/col-right-10.html
+++ b/layouts/shortcodes/col-right-10.html
@@ -1,6 +1,6 @@
 <div class="col-lg-10 pl-lg-5">
   <h2 class="display-5">{{ .Get "title" }}</h2>
-    <p class="lead divider-subtitle mt-2 text-muted">
+    <div class="lead divider-subtitle mt-2 text-muted">
       {{ .Inner }}
-    </p>
+    </div>
 </div>
