--- a/layouts/workshop/list.html
+++ b/layouts/workshop/list.html
@@ -28,7 +28,7 @@
 					<div class="card-deck">
 					<div class="card" style="width: 18rem;">
 						<div class="embed-responsive embed-responsive-16by9">
-							<img src="{{ .Params.image }}" class="img-thumbnail embed-responsive-item card-img-top" alt="post-thumb">
+							<a href="{{ .Permalink }}"><img src="{{ .Params.image }}" class="embed-responsive-item card-img-top" alt="post-thumb"></a>
 						</div>
 						<div class="card-body">
 						  <h5>{{ .Title }}</h3>
