--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
     {{ partial "clients.html" . }}
     {{ partial "meet-the-team.html" . }}
     {{ partial "home-services.html" . }}
+    {{ partial "technologies.html" . }}
     {{ partial "portfolio.html" . }}
     {{ partial "get-started.html" . }}
     {{ partial "footer.html" . }}
