--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -11,10 +11,11 @@
                       <div class="portfolio-content">
                         <ul id="portfolio-content-active">
               {{ $portfolio := .Site.Data.work.portfolio }}
-              {{ $resources := .Resources.ByType "image"}}
+              {{ $images := .Site.GetPage "section" "images" }}
+              {{ $resources := $images.Resources.Match "work/*" }}
               {{ range $resources }}
               {{ with . }}
-                {{ $imageName := .Name }}
+                {{ $imageName := (path.Base .Name) }}
                 {{ $image380:= (.Fill "380x300") }}
                 {{ $image600 := (.Fill "600x600") }}
               
