--- a/layouts/partials/technologies.html
+++ b/layouts/partials/technologies.html
@@ -1,20 +1,19 @@
-    <section class="my-lg-2">
-      <div class="container">
+    <div class=" pb-2">
         <div class="text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <p class="text-muted font-weight-lighter mt-2">Companies we work with:</p>
+              <p class="text-muted font-weight-lighter mt-2">Technologies we ♥ to work with:</p>
             </div>
           </div>
         </div>
-        <div class="clients mt-4">
+        <div class="clients">
           <div class="owl-carousel">
               {{ with .Site.GetPage "section" "images" }}
-              {{ $resources := .Resources.Match "clients/*" }}
+              {{ $resources := .Resources.Match "technologies/*" }}
               {{ range shuffle $resources }}
               {{ with . }}
                 {{ $imageName := .Name }}
-                {{ $image120:= (.Fit "150x80") }}
+                {{ $image120:= (.Fit "120x80") }}
                   <div class="item"><img src="{{ $image120.RelPermalink }}" alt="" class="img-fluid"></div>
               {{ end }}
               {{ end }}
@@ -22,4 +21,3 @@
           </div>
         </div>
       </div>
-    </section>
