--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -9,11 +9,8 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mx-auto">
-              <!-- Calendly link widget begin -->
-            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-            <a class="btn btn-primary" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/bastichelaar/phonecall'});return false;">Schedule a phone call</a>
-            <!-- Calendly link widget end -->
+              <a class="btn btn-outline-primary mt-lg-2" id="book" href="">Book a phone call</a>
+              <script type="text/javascript" src="https://x.ai/embed/xdotai-embed.js" id="xdotaiEmbed" data-page="/bastichelaar/phone" data-height data-width data-element="#book" async></script>
             </a>
           </div>
         </div>
