--- a/layouts/shortcodes/col-left-2.html
+++ b/layouts/shortcodes/col-left-2.html
@@ -1,3 +1,3 @@
-<div class="col-lg-2 mt-5 mt-lg-0 mb-2 embed-responsive">
+<div class="col-2 mx-auto mt-5 mt-lg-0 mb-2">
         {{ .Inner }}
 </div>
