--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,1 +1,1 @@
-<img src='{{ .Get "src"}}' class='{{ .Get "class"}}' />
+<img src='{{ .Get "src"}}' class='{{ .Get "class"}}' title='{{ .Get "title" }}' />
