Added cloud cost scan

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
     {{ partial "header.html" . }}
     {{ partial "hero.html" . }}
     {{ partial "clients.html" . }}
+    {{ partial "scan.html" . }}
     {{ partial "meet-the-team.html" . }}
     {{ partial "home-services.html" . }}
     {{ partial "portfolio.html" . }}
