--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -28,7 +28,7 @@
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/icons/profit.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud cost scan</h3>
+                <h3 class="h4"><a href="/scan">Cloud cost savings</a></h3>
                 <p class="font-weight-light">Cloud can be costly if it's not implemented correctly. We can give you insights and discover possibilities for cost saving.</p>
               </div>
             </div>
