--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -36,7 +36,7 @@
 				</div>
 				{{ end }}
 			</div>
-			<div class="col-12 text-center">
+			<div class="col-12 d-flex justify-content-center">
 				{{ template "_internal/pagination.html" . }}
 			</div>
 		</div>
