--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -78,7 +78,7 @@ blockquote {
 }
 
 .btn-outline-light:hover {
-  color: #FFCC00 !important;
+  color: #F6AE2D !important;
 }
 
 section {
@@ -115,7 +115,7 @@ a {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: #FFCC00;
+  background: #F6AE2D;
   display: block;
   opacity: 1;
   padding: 0;
@@ -154,7 +154,7 @@ button {
   width: 2rem;
   height: 2rem;
   line-height: 2rem;
-  background: #FFCC00;
+  background: #F6AE2D;
   color: #fff;
   text-align: center;
   display: inline-block;
@@ -471,7 +471,7 @@ STYLE SWITCHER FOR DEMO
   border-radius: 0;
   border: none;
   margin-bottom: 1.3rem;
-  background: linear-gradient(45deg, #FFCC00, #FFCC00);
+  background: linear-gradient(45deg, #F6AE2D, #F6AE2D);
 }
 
 .accordion-custom .card-header {
@@ -541,13 +541,13 @@ STYLE SWITCHER FOR DEMO
 }
 
 .sidebar .search .form-control:focus {
-  border-color: #FFCC00;
+  border-color: #F6AE2D;
 }
 
 .sidebar .search .form-control:focus + button {
-  background: #FFCC00;
+  background: #F6AE2D;
   color: #fff;
-  border-color: #FFCC00;
+  border-color: #F6AE2D;
 }
 
 .sidebar .search button {
@@ -579,7 +579,7 @@ STYLE SWITCHER FOR DEMO
 }
 
 .categories-link:hover {
-  color: #FFCC00;
+  color: #F6AE2D;
   text-decoration: none;
 }
 
@@ -591,7 +591,7 @@ STYLE SWITCHER FOR DEMO
 }
 
 .tag-link:hover {
-  background: #FFCC00;
+  background: #F6AE2D;
   color: #fff;
   text-decoration: none;
 }
@@ -851,7 +851,7 @@ mark,
   padding: 2rem 1.5rem;
   margin-bottom: 2rem;
   font-size: 1.1rem;
-  border-left: 5px solid #FFCC00;
+  border-left: 5px solid #F6AE2D;
   font-weight: 300;
   background: #f5f5f5;
   line-height: 1.8rem;
@@ -866,7 +866,7 @@ mark,
 }
 
 .text-primary {
-  color: #FFCC00 !important;
+  color: #F6AE2D !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -888,8 +888,8 @@ a.text-primary:hover, a.text-primary:focus {
 
 .page-item.active .page-link {
   color: #fff;
-  background-color: #FFCC00;
-  border-color: #FFCC00;
+  background-color: $yellow;
+  border-color: $blue;
 }
 
 .page-item.disabled .page-link {
@@ -901,9 +901,9 @@ a.text-primary:hover, a.text-primary:focus {
 .page-link {
   padding: 0.5rem 0.75rem;
   line-height: 1.25;
-  color: #FFCC00;
+  color: $blue;
   background-color: #fff;
-  border: 1px solid #dee2e6;
+  border: 0px solid #dee2e6;
 }
 
 .page-link:hover, .page-link:focus {
