--- a/layouts/partials/meet-the-team.html
+++ b/layouts/partials/meet-the-team.html
@@ -11,8 +11,8 @@
             </div><a href="/team" class="btn btn-primary">Get to know us</a>
           </div>
           <div class="col-lg-7 mt-5 mt-lg-0 mb-2 embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/Kila1FvQPXw?rel=0&amp;controls=0&amp;showinfo=0&amp;modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+            <iframe class="embed-responsive-item" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" type="text/html" src="https://www.youtube.com/embed/Kila1FvQPXw?autoplay=0&fs=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0"></iframe>
+            </div>
         </div>
       </div>
     </section>
