Changed team headline

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -2,7 +2,7 @@
 <section id="instagram">
   <div class="container">
     <div class="text-center">
-      <h2 class="display-5">Work hard, play hard!</h2>
+      <h2 class="display-5">It's not all about work...</h2>
     </div>
     <div class="row">
       <div class="col-md-12">
