--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,9 +27,9 @@
 	    <div class="container">
             
 	      <div class="row justify-content-center">
-            {{ if isset .Params "image" }}
+            {{ if isset .Params "images" }}
 	          <div class="col-md-10">
-              {{ with .Params.image }}<div class="float-right m-2 w-25" ><img src="{{ . | absURL }}" class="img-fluid" alt="post-image"></div>{{ end }}
+              {{ with (index (.Params.images) 0) }}<div class="float-right m-2 w-50" ><img src="{{ . | absURL }}" class="img-fluid" alt="post-image" title="{{ $.Page.Title }}"></div>{{ end }}
 	            <p>{{ .Content }}</p>
             </div>
             {{ else }}
