--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -1,10 +1,10 @@
-<section class="my-lg-5">
+<section class="py-lg-5 bg-dark">
     <div class="container">
-        <div class="text-center">
-          <h2 class="display-4">Services</h2>
+        <div class="text-center text-light">
+          <h2 class="display-4 text-light">Services</h2>
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <p class="lead text-muted mt-2">We like to solve hard problems. Can you challenge us?</p>
+              <p class="lead text-muted mt-2 text-light">We like to solve hard problems. Can you challenge us?</p>
             </div>
           </div>
         </div>
@@ -13,15 +13,15 @@
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/icons/developer.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud consultancy</h3>
-                <p class="font-weight-light">Get one of our experts to help your organisation.</p>
+                <h3 class="h4 text-light">Cloud consultancy</h3>
+                <p class="font-weight-light text-light">Get one of our experts to help your organisation.</p>
               </div>
             </div>
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/icons/brainstorming.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud jumpstart</h3>
-                <p class="font-weight-light">Kickstart your Cloud journey with one of our productized services.</p>
+                <h3 class="h4 text-light">Cloud jumpstart</h3>
+                <p class="font-weight-light text-light">Kickstart your Cloud journey with one of our productized services.</p>
               </div>
             </div>  
             <div class="col-lg-4">
