--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,9 +3,10 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="body body--home">
+  <body class="body">
     {{ partial "header.html" . }}
     {{ partial "hero.html" . }}
+    {{ partial "diagonal.html" . }}
     {{ partial "clients.html" . }}
     {{ partial "scan.html" . }}
     {{ partial "meet-the-team.html" . }}
