--- a/layouts/partials/clients.html
+++ b/layouts/partials/clients.html
@@ -1,4 +1,5 @@
-    <section class="my-lg-2">
+
+    <section class="bg-white">
       <div class="container">
         <div class="text-center">
           <div class="row">
